tests/accept/scope.ul
int foo(int foo) {
  return foo + 1;
}

void main() {
  int x;
  x = foo(1) + 1;

  if (true) {
    int a;
    while(true) {
      int b;
      x = a + b;
    }
    a = x + foo(a);
  }
}
