tests/reject/bad_if.ul
int foo() {}

void main() {
  if (foo()) {}
}